--- a/sub_02.html
+++ b/sub_02.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/sub_01.css">
+    <link rel="stylesheet" href="css/sub_02.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Document</title>
 </head>
@@ -23,22 +23,22 @@
                             <p class="gnb_title">Brand</p>
                             <ul class="dropdown-nav">
                                 <li><a href="">소개</a></li>
+                                <li><a href="">연혁</a></li>
                                 <li><a href="">BI</a></li>
-                                <li><a href="">본사</a></li>
-                                <li><a href="">오시는길</a></li>
+                                <li><a href="">매장안내</a></li>
                             </ul>
                         </li>
                         <li>
                             <p class="gnb_title">Menu</p>
                             <ul class="dropdown-nav">
-                                <li><a href="">온라인스토어</a></li>
-                                <li class="dropdown-sub"><a href="">컵 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="">바 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="">샌드&콘 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="">케이크</a></li>
-                                <li><a href="">오프라인 스토어</a></li>
-                                <li class="dropdown-sub"><a href="">크레이션 메뉴</a></li>
-                                <li class="dropdown-sub"><a href="">아이스크림 드링크</a></li>
+                                <li><a href="sub_01.html#online">온라인스토어</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#cup">컵 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#bar">바 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#sand">샌드&콘 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#cake">아이스크림 케이크</a></li>
+                                <li><a href="sub_01.html#offline">오프라인 스토어</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#creation">크리에이션 메뉴</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#drink">아이스크림 드링크</a></li>
                             </ul>
                         </li>
                         <li>
@@ -47,20 +47,20 @@
                                 <li><a href="">컵 아이스크림</a></li>
                                 <li><a href="">바 아이스크림</a></li>
                                 <li><a href="">샌드&콘 아이스크림</a></li>
-                                <li><a href="">케이크</a></li>
-                                <li><a href="">공지</a></li>
+                                <li><a href="">아이스크림 케이크</a></li>
                             </ul>
                         </li>
                         <li>
-                            <p class="gnb_title">Store</p>
+                            <p class="gnb_title">News</p>
                             <ul class="dropdown-nav">
-                                <li><a href="sub_02.html">매장정보</a></li>
+                                <li><a>이벤트</a></li>
+                                <li><a>공지사항</a></li>
                             </ul>
                         </li>
                         <li>
                             <p class="gnb_title">B2B</p>
                             <ul class="dropdown-nav">
-                                <li><a href="sub_01.html">비즈니스 파트너</a></li>
+                                <li><a>비즈니스 파트너</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -117,8 +117,8 @@
             });
         </script>
         <div class="visual">
-            <h2>HaagenDazs B2B</h2>
-            <img src="image/visual_02.png">
+            <h2>HaagenDazs Menu</h2>
+            <img src="image/visual_01.png">
         </div>
     </header>
     <main>
