--- a/sub_01.html
+++ b/sub_01.html
@@ -20,7 +20,7 @@
                     </h1>
                     <ul class="gnb">
                         <li>
-                            <p class="gnb_title">Brand</p>
+                            <a href="#" class="gnb_title">Brand</a>
                             <ul class="dropdown-nav">
                                 <li><a href="">소개</a></li>
                                 <li><a href="">연혁</a></li>
@@ -29,36 +29,37 @@
                             </ul>
                         </li>
                         <li>
-                            <p class="gnb_title">Menu</p>
+                            <a href="sub_01.html#online" class="gnb_title">Menu</a>
                             <ul class="dropdown-nav">
-                                <li><a href="#online">온라인스토어</a></li>
-                                <li class="dropdown-sub"><a href="#cup">컵 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="#bar">바 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="#sand">샌드&콘 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="#cake">아이스크림 케이크</a></li>
-                                <li><a href="#offline">오프라인 스토어</a></li>
-                                <li class="dropdown-sub"><a href="#creation">크리에이션 메뉴</a></li>
-                                <li class="dropdown-sub"><a href="#drink">아이스크림 드링크</a></li>
+                                <li><a href="sub_01.html#online">온라인스토어</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#cup">컵 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#bar">바 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#sand">샌드&콘 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#cake">아이스크림 케이크</a></li>
+                                <li><a href="sub_01.html#offline">오프라인 스토어</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#creation">크리에이션 메뉴</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#drink">아이스크림 드링크</a></li>
                             </ul>
                         </li>
                         <li>
-                            <p class="gnb_title">Online Shop</p>
+                            <a href="#" class="gnb_title">Online Shop</a>
                             <ul class="dropdown-nav">
                                 <li><a href="">컵 아이스크림</a></li>
                                 <li><a href="">바 아이스크림</a></li>
                                 <li><a href="">샌드&콘 아이스크림</a></li>
                                 <li><a href="">아이스크림 케이크</a></li>
+                                <li><a href="">배송공지</a></li>
                             </ul>
                         </li>
                         <li>
-                            <p class="gnb_title">News</p>
+                            <a href="#" class="gnb_title">News</a>
                             <ul class="dropdown-nav">
                                 <li><a>이벤트</a></li>
                                 <li><a>공지사항</a></li>
                             </ul>
                         </li>
                         <li>
-                            <p class="gnb_title">B2B</p>
+                            <a href="#" class="gnb_title">B2B</a>
                             <ul class="dropdown-nav">
                                 <li><a>비즈니스 파트너</a></li>
                             </ul>
