--- a/sub_01.html
+++ b/sub_01.html
@@ -67,7 +67,7 @@
                     </ul>
                     <p>
                         <a href="" class="login">login</a>
-                        <a href="" class="hamburger"><img src="../image/hamburger.png"></a>
+                        <a href="" class="hamburger"><img src="image/hamburger.png"></a>
                     </p>
                     <div class="mobile-menu">
                         <ul class="gnb-mobile"></ul>
@@ -118,7 +118,7 @@
             });
         </script>
         <div class="visual">
-            <h2>HaagenDazs Menu</h2>
+            <h2>Menu</h2>
             <img src="image/visual_01.png">
         </div>
     </header>
