--- a/sub_01.html
+++ b/sub_01.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/sub_01.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <title>Document</title>
+    <title>Haagen-Dazs Menu</title>
 </head>
 
 <body>
