--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="image/logo_02.png">
+    <meta property="og:image" content="image/thumbnail.png" width="800" height="600">
     <meta property="og:title" content="송혜린_하겐다즈">
     <meta property="og:description" content="너무_하기싫었지만_열심히한_uiux_과제">
     <meta property="og:url" content="https://sonn08120-png.github.io/haagendazs/">
