--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_01.html#online" class="gnb_title">Menu</a>
+                            <a href="sub_01.html" class="gnb_title">Menu</a>
                             <ul class="dropdown-nav">
                                 <li><a href="sub_01.html#online">온라인스토어</a></li>
                                 <li class="dropdown-sub"><a href="sub_01.html#cup">컵 아이스크림</a></li>
