--- a/sub_01.html
+++ b/sub_01.html
@@ -240,27 +240,27 @@
             <div class="menu_list_warp">
                 <ul class="creation_menu_list" id="creation">
                     <li class="img_small"><a href="#"><img src="image/dessert_01.png">
-                            <p>오프라인 아이스크림 드링크 A</p>
+                            <p>쿠키&크림 파르페 크런치</p>
                         </a></li>
                     <li class="img_small"><a href="#"><img src="image/dessert_02.png">
-                            <p>오프라인 아이스크림 드링크 A</p>
+                            <p>요거트 파르페 크런치</p>
                         </a></li>
                     <li><a href="#"><img src="image/dessert_03.png">
-                            <p>오프라인 아이스크림 드링크 A</p>
+                            <p>와플 드림</p>
                         </a></li>
                 </ul>
                 <ul class="drink_menu_list" id="drink">
                     <li><a href="#"><img src="image/drink_01.png">
-                            <p>오프라인 크리에이티브 메뉴 A</p>
+                            <p>둘세 데 레체 아이스크림 마끼아또</p>
                         </a></li>
                     <li><a href="#"><img src="image/drink_03.png">
-                            <p>오프라인 크리에이티브 메뉴 A</p>
+                            <p>리얼 초코 드링크</p>
                         </a></li>
                     <li class="img_small"><a href="#"><img src="image/drink_04.png">
-                            <p>오프라인 크리에이티브 메뉴 A</p>
+                            <p>아포가토</p>
                         </a></li>
                     <li class="img_small"><a href="#"><img src="image/drink_05.png">
-                            <p>오프라인 크리에이티브 메뉴 A</p>
+                            <p>베리 쿨</p>
                         </a></li>
                 </ul>
             </div>
