--- a/sub_01.html
+++ b/sub_01.html
@@ -31,7 +31,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_01.html" class="gnb_title">Menu</a>
+                            <a href="sub_01.html#online" class="gnb_title">Menu</a>
                             <ul class="dropdown-nav">
                                 <li><a href="sub_01.html#online">온라인스토어</a></li>
                                 <li class="dropdown-sub"><a href="sub_01.html#online">컵 아이스크림</a></li>
@@ -140,6 +140,15 @@
                         </a></li>
                 </ul>
             </div>
+            <div class="number">
+                <ul>
+                    <li><img src="image/arrow_left_small.png"></li>
+                    <li><b>1</b></li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li><img src="image/arrow_right_small.png"></li>
+                </ul>
+            </div>
         </div>
 
         <div class="Menu_list offline_menu" style="display:none;">
@@ -157,6 +166,14 @@
                     <li><a href="#"><img src="image/dessert_03.png" alt="와플 드림" />
                             <p>와플 드림</p>
                         </a></li>
+                </ul>
+            </div>
+            <div class="number">
+                <ul>
+                    <li><img src="image/arrow_left_small.png"></li>
+                    <li><b>1</b></li>
+                    <li>2</li>
+                    <li><img src="image/arrow_right_small.png"></li>
                 </ul>
             </div>
         </div>
