--- a/sub_01.html
+++ b/sub_01.html
@@ -70,7 +70,7 @@
                     <p>
                         <a href="" class="login">login</a>
                         <a href="#" class="hamburger" aria-label="메뉴 열기" aria-expanded="false"><img
-                                src="../image/hamburger.png" alt="menu" /></a>
+                                src="image/hamburger.png" alt="menu" /></a>
                     </p>
                     <div class="mobile-menu" aria-hidden="true">
                         <ul class="gnb-mobile"></ul>
